test_files/fails/c_advance_on_different_clocks_in_match.ar
let rec foo = \x ->
    delay (
        match x with
        | 0 -> adv (wait second) :: foo 1
        | _ -> adv (wait minute) :: foo 0);

console <- () :: foo 0;
